--- a/frontend/app/templates/products.hbs
+++ b/frontend/app/templates/products.hbs
@@ -9,7 +9,7 @@
   </div>
 
   <div class="col-md-9">
-    {{render 'carousel'}}
+    {{partial 'carousel'}}
 
     <div class="row">
       {{#each}}
