Everyone knows bindAttr is deprecated, why don't I...

--- a/frontend/app/templates/product.hbs
+++ b/frontend/app/templates/product.hbs
@@ -10,7 +10,7 @@
 
   <div class="col-md-9">
     <div class="thumbnail">
-      <img class="img-responsive" {{bindAttr src=largeImageUrl}} alt="">
+      <img class="img-responsive" {{bind-attr src=largeImageUrl}} alt="">
       <div class="caption-full">
         <h4 class="pull-right">${{amount}}</h4>
         <h4>{{title}}</h4>
