--- a/frontend/app/templates/components/product-tile.hbs
+++ b/frontend/app/templates/components/product-tile.hbs
@@ -1,6 +1,6 @@
 <div class="col-sm-4 col-lg-4 col-md-4">
   <div class="thumbnail">
-    <img {{bindAttr src=product.smallImageUrl}} alt="">
+    <img {{bind-attr src=product.smallImageUrl}} alt="">
     <div class="caption">
       <h4 class="pull-right">${{product.amount}}</h4>
       <h4>{{#link-to 'product' product}}{{product.title}}{{/link-to}}</a>
